@@ -115,10 +115,6 @@ public:
   OptimizationAlgorithm getOptimizationAlgorithm() const;
   void setOptimizationAlgorithm(const OptimizationAlgorithm & solver);
 
-  // @deprecated
-  OptimizationAlgorithm getOptimizationSolver() const;
-  void setOptimizationSolver(const OptimizationAlgorithm & solver);
-
   /** Optimization flag accessor */
   Bool getOptimizeParameters() const;
   void setOptimizeParameters(const Bool optimizeParameters);
