@@ -16,6 +16,7 @@
  * Removed deprecated DynamicalFunction, SpatialFunction, TemporalFunction classes
  * Removed deprecated KarhunenLoeveP1Factory, KarhunenLoeveQuadratureFactory classes
  * Removed deprecated GramSchmidtAlgorithm, ChebychevAlgorithm classes
+ * Removed [gs]etOptimizationSolver methods
 
 === Python module ===
 
